objects/CryptoType__c/CryptoType__c.object-meta.xml
<CustomObject>
    <label>CryptoType</label>
    <nameField>
        <label>CryptoType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CryptoTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>