objects/CryptoType__c/fields/imageurl__c.field-meta.xml
<CustomField>
    <fullName>imageurl__c</fullName>
    <label>imageurl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>