objects/CryptoType__c/fields/subscribed__c.field-meta.xml
<CustomField>
    <fullName>subscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>does the user want to see this symbol?</description>
    <label>subscribed</label>
    <type>Checkbox</type>
</CustomField>