objects/CryptoType__c/fields/symbol__c.field-meta.xml
<CustomField>
    <fullName>symbol__c</fullName>
    <description>The trading symbol</description>
    <label>symbol</label>
    <length>20</length>
    <type>Text</type>
</CustomField>